Hibák javítása, fájlelérések javítása