@@ -1,30 +1,36 @@
 package stringscanner;
 
+import java.util.InputMismatchException;
 import java.util.Scanner;
 
 public class StringScanner {
 
     public int readAndSumValues(String intString, String delimiter) {
-        if (isEmpty(intString) || isEmpty(delimiter)) {
+        if (isEmpty(intString) ) {
             throw new IllegalArgumentException("Invalid parameter!");
         }
 
         int sumvalue = 0;
         Scanner scanner = new Scanner(intString);
-        scanner.useDelimiter(delimiter);
-
-        while (scanner.hasNextInt()) {
-            sumvalue += scanner.nextInt();
+        if (!isEmpty(delimiter)) {
+            scanner.useDelimiter(delimiter);
+        }
+        try {
+            while (scanner.hasNext()) {
+                sumvalue += scanner.nextInt();
+            }
+        } catch (InputMismatchException ex) {
+            throw new IllegalArgumentException("Incorrect parameter string!", ex);
         }
         return sumvalue;
     }
 
     public int readAndSumValues(String intString) {
-        return readAndSumValues(intString, new Scanner("null").delimiter().pattern());
+        return readAndSumValues(intString, null);
     }
 
     public String filterLinesWithWordOccurrences(String text, String word) {
-        if (isEmpty(text) || isEmpty(word)) {
+        if (isEmpty(text) ||  word == null || "".equals(word)) {
             throw new IllegalArgumentException("Invalid parameter!");
         }
 
@@ -37,10 +43,10 @@ public class StringScanner {
             }
         }
 
-        return stringBuilder.toString();
+        return stringBuilder.toString().trim();
     }
 
     private boolean isEmpty(String string) {
-        return string != null && string.isBlank();
+        return string == null || string.trim().isEmpty();
     }
 }
